--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +60,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/shoe1.png
+    - assets/images/shoe2.png
+    - assets/images/shoe3.png
+    - assets/images/shoe4.png
+    - assets/images/shoe5.png
+    - assets/images/shoe6.png
+    - assets/images/shoe7.png
+    - assets/images/shoe8.png
+    - assets/images/shoe9.png
+    - assets/images/shoe10.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
