--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path: any
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.10
+  image_picker: ^0.8.7+4
+  http: ^0.13.5
+  path_provider: ^2.0.14
+  flutter_image_compress: ^1.1.3
+  flutter_spinkit: ^5.2.0
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
