--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_image_compress: ^1.1.3
   flutter_spinkit: ^5.2.0
   font_awesome_flutter: ^10.4.0
+  supercharged: ^2.1.1
+  simple_animations: ^4.2.0
 
 dev_dependencies:
   flutter_test:
