--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   path: any
+  internet_connection_checker: ^1.0.0+1
+  connectivity_plus: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
